<resources>
    <string name="app_name">Assignment-1-Study-App</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Study Helper</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_timer">Pomodoro Timer</string>
    <string name="menu_notes">Notes</string>
    <string name="menu_edit_notes">Edit Note</string>
    <string name="menu_flashcards">Flash Cards</string>
    <string name="menu_edit_deck">Edit Deck</string>
    <string name="menu_edit_card">Edit Card</string>
    <string name="menu_play_deck">Play Deck</string>
    <string name="menu_todo">Todo</string>
    <string name="menu_edit_todo">Edit Todo</string>
    <string name="menu_timetable">Timetable</string>
    <string name="menu_edit_timetable">Edit Timetable</string>
</resources>
