<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@android:drawable/ic_menu_sort_by_size"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_timer"
            android:icon="@android:drawable/ic_menu_recent_history"
            android:title="@string/menu_timer" />
        <item
            android:id="@+id/nav_notes"
            android:icon="@android:drawable/ic_menu_edit"
            android:title="@string/menu_notes" />
        <item
            android:id="@+id/nav_decks"
            android:icon="@android:drawable/ic_menu_add"
            android:title="@string/menu_flashcards" />
        <item
            android:id="@+id/nav_todo"
            android:icon="@android:drawable/ic_menu_add"
            android:title="@string/menu_todo" />
    </group>
</menu>
