<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.assignment_1_study_app.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home">
    </fragment>

    <fragment
        android:id="@+id/nav_timer"
        android:name="com.example.assignment_1_study_app.ui.timer.TimerFragment"
        android:label="@string/menu_timer"
        tools:layout="@layout/fragment_timer" />

    <fragment
        android:id="@+id/nav_notes"
        android:name="com.example.assignment_1_study_app.ui.notes.NotesFragment"
        android:label="@string/menu_notes"
        tools:layout="@layout/fragment_notes" >
        <action
            android:id="@+id/action_nav_notes_to_nav_edit_notes"
            app:destination="@id/nav_edit_notes" />
    </fragment>

    <fragment
        android:id="@+id/nav_edit_notes"
        android:name="com.example.assignment_1_study_app.ui.notes.NotesEditFragment"
        android:label="@string/menu_edit_notes"
        tools:layout="@layout/fragment_edit_notes">
        <argument
            android:name="title"
            app:argType="string"
            android:defaultValue="Untitled" />
    </fragment>

    <fragment
        android:id="@id/nav_decks"
        android:name="com.example.assignment_1_study_app.ui.flashcards.FlashCardsFragment"
        android:label="@string/menu_flashcards"
        tools:layout="@layout/fragment_flashcards" >
        <action
            android:id="@+id/action_nav_decks_to_nav_edit_deck"
            app:destination="@id/nav_edit_deck" />
    </fragment>

    <fragment
        android:id="@+id/nav_edit_deck"
        android:name="com.example.assignment_1_study_app.ui.flashcards.FlashCardsDeckEditFragment"
        android:label="@string/menu_edit_deck"
        tools:layout="@layout/fragment_flashcards_cardsview">
        <argument
            android:name="id"
            app:argType="long" />
        <action
            android:id="@+id/action_nav_edit_deck_to_nav_edit_card"
            app:destination="@id/nav_edit_card" />
        <action
            android:id="@+id/action_nav_edit_deck_to_nav_play_deck"
            app:destination="@id/nav_play_deck" />
    </fragment>

    <fragment
        android:id="@+id/nav_play_deck"
        android:name="com.example.assignment_1_study_app.ui.flashcards.FlashCardsDeckPlayFragment"
        android:label="@string/menu_play_deck"
        tools:layout="@layout/fragment_play_deck">
        <argument
            android:name="id"
            app:argType="long" />
    </fragment>

    <fragment
        android:id="@+id/nav_edit_card"
        android:name="com.example.assignment_1_study_app.ui.flashcards.FlashCardsCardEditFragment"
        android:label="@string/menu_edit_card"
        tools:layout="@layout/fragment_edit_card">
        <argument
            android:name="id"
            app:argType="long" />
    </fragment>

    <fragment
        android:id="@+id/nav_todo"
        android:name="com.example.assignment_1_study_app.ui.todo.TodoFragment"
        android:label="@string/menu_todo"
        tools:layout="@layout/fragment_todo" />

    <fragment
        android:id="@+id/nav_edit_todo"
        android:name="com.example.assignment_1_study_app.ui.todo.TodoEditFragment"
        android:label="@string/menu_edit_todo"
        tools:layout="@layout/fragment_edit_todo" />

    <fragment
        android:id="@+id/nav_timetable"
        android:name="com.example.assignment_1_study_app.ui.timetable.TimetableFragment"
        android:label="@string/menu_timetable"
        tools:layout="@layout/fragment_timetable" />

    <fragment
        android:id="@+id/nav_edit_timetable"
        android:name="com.example.assignment_1_study_app.ui.timetable.TimetableEditFragment"
        android:label="@string/menu_edit_timetable"
        tools:layout="@layout/fragment_edit_timetable" />
</navigation>